2018-03-01 [mborik] bugfix of regression introduced in last commit when ROM modules didn't work (found by Cizo, thanks!)
2018-02-13 [mborik] fixed long-time persisting issue with changing memory/rom/rmm configuration; fixed bug in ChipMemory2AEx
2018-02-12 [mborik] implemented 256k memory expansion; fixed updir path related bug; striping of long filenames in menu
2018-02-05 [mborik] settings updated and extended to all new features; slim down of roms - removed obsolete and unusable
2018-01-30 [mborik] ChipMemory splitted into separate child classes for each model, method for reset status & currently mapped VRAM pointer
2018-01-22 [mborik] implemented ChipCpu8080P which take into account slowdown of the video-processor
2018-01-21 [mborik] fixed illegal memory access bug in x4 scale function
2018-01-20 [mborik] fixed critical issues with window/renderer/screen (re)initialization
2018-01-14 [mborik] scalers replaced with scanliner texture overlay
2018-01-13 [mborik] fixed all menu and keyhandling issues after SDL2 migration
2018-01-11 [mborik] drop of OpenGL hacks, fixed init crack in sound driver, implemented surface blitter to fix icons in statusbar
2018-01-10 [mborik] massive refactoring of screen and user interface processing and rendering
2018-01-08 [mborik] upgraded SDL to 2.x, simplified screen rendering (unstable, missing menu overlay & scanliners)
2017-12-21 [mborik] refactoring of ScreenPMD85::FillBuffer and keyword multicolor to proper ColorAce
2017-12-20 [mikezt] fixed disk image saving problems
2017-09-18 [mborik] warnings suppression (phase 2), project update, repo cleanup and fixing the build for MacOS
2017-09-14 [mborik] warnings suppression (phase 1)
2017-04-19 [ub880d] bugfix in screen rendering and fixing the build for new gcc (narrowing conversions)
2016-07-25 [ub880d] fixed missing callback on menu entry "OK" of "SAVE MEMORY"
2015-05-24 [ub880d] added warning about wrong file extension for ROM modules