@@ -27,7 +27,7 @@ public:
 	virtual void ResetOn();
 	virtual void ResetOff();
 
-	virtual BYTE* GetVramPointer();
+	virtual inline BYTE* GetVramPointer();
 	virtual int FindPointer(int physAddr, int len, int oper, BYTE **ptr);
 
 private:
